# AI-agent-hub

./: Cargo.toml  README.md
backend/services-ts/: .gitignore  package.json  tsconfig.json
backend/services-ts/.papi/: polkadot-api.json
backend/services-ts/.papi/contracts/: paymentEscrow.json
backend/services-ts/.papi/descriptors/: package.json
backend/services-ts/contracts/: service_registry.json
backend/services-ts/src/: index.ts
backend/services-ts/src/config/: index.ts
backend/services-ts/src/contracts/: index.ts
contracts/payment_escrow/: Cargo.toml  lib.rs
contracts/service_registry/: Cargo.toml  lib.rs
